src/test/ui/stability-attribute/missing-const-stability.stderr
error: `#[stable]` const functions must also be either `#[dustc_const_stable]` or `#[dustc_const_unstable]`
  --> $DIR/missing-const-stability.rs:6:1
   |
LL | pub const fn foo() {}
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

